--- a/veiws/login.ejs
+++ b/veiws/login.ejs
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EduVista | Students</title>
-    <link rel="icon" href="./img/eduvista.png">
+    <title>Secured-Login | Classroom Help</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
@@ -18,7 +17,7 @@
         }
 
         body {
-            background-color: aliceblue;
+            background-color: Black;
             color: #000;
             background-image: url("./img/bgs/");
             background-repeat: no-repeat;
@@ -78,7 +77,7 @@
 <body>
     <center style="margin-top: 10%;">
         <div class="panel">
-            <h1>EduVista: Student Login</h1>
+            <h1>Classroom Help : Student Login</h1>
             <br>
             <form onsubmit="loginSystem()" id="form">
                 <br><input placeholder="Username" id="username" type="text" />
