--- a/veiws/teachers.ejs
+++ b/veiws/teachers.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EduVista | Teachers</title>
+    <title>Classroom Help | Teachers</title>
     <link rel="icon" href="./img/eduvista.png">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
@@ -16,7 +16,7 @@
             font-size: 2em;
         }
         body {
-            background-color: aliceblue;
+            background-color: Black;
             color: #000;
             background-image: url("./img/bgs/");
             background-repeat: no-repeat;
@@ -75,7 +75,7 @@
 <body>
     <center style="margin-top: 10%;">
         <div class="panel">
-            <h1>EduVista: Teacher Login</h1>
+            <h1>Classroom Help : Teacher Login</h1>
             <br>
             <form>
                 <br><input placeholder="Username" id="username" type="text" />
